# drone-pose-estimation

./: .gitattributes  .gitignore  .gitmodules  MDS.ipynb  MDS3.ipynb  MDS_ideal.py  MDS_n.ipynb  MDS_wiki.ipynb  README.md  algorithm.py  distances.py  install.sh  install_tools.sh  lib.maplet  lib.mw  main.py  mav.parm  mav.tlog  mav.tlog.raw  mav_2_1.parm  mav_3_1.parm  test.py  theta.mw
Maple/: MDS.mw
dev_ws/src/mds_rover/: package.xml  setup.cfg  setup.py
dev_ws/src/mds_rover/config/: config.yaml
dev_ws/src/mds_rover/launch/: mds_rover.launch.py  mds_rover_launch.py
dev_ws/src/mds_rover/mds_rover/: algebra.py  anchor.py  plots.py  rover.py
src/iq_sim/: CMakeLists.txt  package.xml
src/iq_sim/config/: config.yaml
src/iq_sim/launch/: apm.launch.py  mavros_node.launch.py  multi-apm-launch.xml  multi-apm.launch.py  multi-apm.launch2.py
src/iq_sim/models/drone1/: model.config
src/iq_sim/models/drone10/: model.config  model.sdf
src/iq_sim/models/drone11/: model.config  model.sdf
src/iq_sim/models/drone12/: model.config  model.sdf
src/iq_sim/models/drone13/: model.config  model.sdf
src/iq_sim/models/drone14/: model.config  model.sdf
src/iq_sim/models/drone15/: model.config  model.sdf
src/iq_sim/models/drone16/: model.config  model.sdf
src/iq_sim/models/drone17/: model.config  model.sdf
src/iq_sim/models/drone18/: model.config  model.sdf
src/iq_sim/models/drone19/: model.config  model.sdf
src/iq_sim/models/drone2/: model.config  model.sdf
src/iq_sim/models/drone20/: model.config  model.sdf
src/iq_sim/models/drone21/: model.config  model.sdf
src/iq_sim/models/drone22/: model.config  model.sdf
src/iq_sim/models/drone23/: model.config  model.sdf
src/iq_sim/models/drone24/: model.config  model.sdf
src/iq_sim/models/drone3/: model.sdf
src/iq_sim/models/drone4/: model.config  model.sdf
src/iq_sim/models/drone5/: model.config
src/iq_sim/models/drone6/: model.config  model.sdf
src/iq_sim/models/drone7/: model.config  model.sdf
src/iq_sim/scripts/: PrintColours.py  algebra.py  data_reader.ipynb  drone_generation.py  fly.py  fly_2.py  generate_gazebo_parms.py  generate_models.py  generate_vehicleinfo.py  generate_world.py  hub.py  launch_gazebo.sh  launch_test.sh  main.py  mav.parm  mav.tlog  mav.tlog.raw  mav_2_1.parm  mav_3_1.parm  multi-test.ipynb  navigation.py  plot.py  py_gnc_functions.py  simulation.sh  simulation2.sh  test.py  test.sh  xxxx.ipynb
src/iq_sim/worlds/: multi_drone.world  multi_drone_empty.world  runway.world
(+1194 files in other folders)
