<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mds_rover</name>
  <version>0.0.0</version>
  <description>package for a distributed system of rovers sending relative position to an anchor which suns an MDS algorithm to find the platoon configuration</description>
  <maintainer email="giacomo.mutti@studenti.unitn.it">giacomo</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>utils</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
